In depth backend setup and scaffolding